--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,209 @@
-.App {
-  text-align: center;
+.profile {
+  margin: 10.5% 18.6% 4.47% 11.45%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (max-width: 1440px) {
+  .profile {
+    margin: 10.5% 5.27% 4.47% 6.92%;
+  }
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 1280px) {
+  .profile {
+    margin: 10.5% 3.73% 4.47% 4.4%;
+  }
+}
+@media (max-width: 1140px) {
+  .profile {
+    margin: 10.5% 8.93% 4.47% 12.89%;
+  }
+}
+@media (min-width: 581px) and (max-width: 1024px) {
+  .profile {
+    margin: 10.5% 3% 4.47% 3%;
+  }
+}
+@media (min-width: 425px) and (max-width: 580px) {
+  .profile {
+    margin: 10.5% 20% 4.47% 30%;
+  }
+}
+@media (min-width: 320px) and (max-width: 425px) {
+  .profile {
+    margin: 33px 5px 20px 18px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.profile__title {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 64px;
+  letter-spacing: 0.05em;
+  color: #0e0e0e;
+  margin-bottom: 30px;
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__title {
+    font-size: 22px;
+    line-height: 22px;
+    margin-bottom: 25px;
+  }
+}
+
+.profile__container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.profile__container-about {
+  margin-left: 43px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__container-about {
+    margin-left: 11px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+.profile__item {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 152.51%;
+  letter-spacing: 0.05em;
+  color: rgba(14, 14, 14, 0.7);
+  margin: 0;
+  padding-top: 1px;
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__item {
+    font-size: 10px;
+  }
+}
+
+.profile__item-user {
+  font-family: Helvetica Neue;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 152.51%;
+  letter-spacing: 0.05em;
+  color: #0e0e0e;
+  margin: 0;
+  margin-top: -10px;
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__item-user {
+    font-size: 12px;
+    margin-top: -5px;
+  }
+}
+
+.profile__container-about_left-margin {
+  margin-left: 565px;
+  margin-top: -375px;
+}
+@media (max-width: 1530px) {
+  .profile__container-about_left-margin {
+    margin-left: 490px;
+  }
+}
+@media (max-width: 1440px) {
+  .profile__container-about_left-margin {
+    margin-left: 460px;
+  }
+}
+@media (max-width: 1340px) {
+  .profile__container-about_left-margin {
+    margin-left: 370px;
+  }
+}
+@media (max-width: 1210px) {
+  .profile__container-about_left-margin {
+    margin-left: 300px;
+  }
+}
+@media (max-width: 1140px) {
+  .profile__container-about_left-margin {
+    margin-left: -355px;
+    margin-top: 86px;
+  }
+}
+@media (max-width: 860px) {
+  .profile__container-about_left-margin {
+    margin-top: 20px;
+  }
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__container-about_left-margin {
+    margin-left: -113px;
+    margin-top: 0;
+  }
+}
+
+.profile__item-user_mod {
+  font-size: 24px;
+  margin-top: 3px;
+  margin-bottom: 15px;
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__item-user_mod {
+    font-size: 12px;
+    margin-top: 1px;
+    margin-bottom: -2px;
+  }
+}
+
+@media (max-width: 1140) {
+  .profile__container-media {
+    display: flex;
+    margin-left: -50px;
+  }
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__container-media {
+    margin-top: 15px;
+  }
+}
+
+@media (max-width: 860px) {
+  .profile__item-user_mod-media {
+    order: 2;
+    margin-bottom: 30px;
+  }
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__item-user_mod-media {
+    order: 2;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: 581) and (max-width: 860px) {
+  .profile__item_mod-media.profile__item_mod-media {
+    order: 1;
+    width: 74px;
+    margin-top: 50px;
+    margin-left: -360px;
+  }
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__item_mod-media.profile__item_mod-media {
+    order: 1;
+    width: 74px;
+    margin-right: 40px;
+    margin-left: -113px;
+    margin-top: -30px;
+  }
+}
+
+@media (max-width: 860px) {
+  .profile__container-mod {
+    margin-left: -360px;
+  }
+}
+@media (min-width: 320px) and (max-width: 580px) {
+  .profile__container-mod {
+    margin-left: -113px;
+    margin-top: 15px;
   }
 }
